--- a/public/index.html
+++ b/public/index.html
@@ -2,44 +2,80 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://res.cloudinary.com/dx97khgxd/image/upload/v1730437919/Screenshot_2024_1026_100527-removebg-preview_h9ami8.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link
+      rel="icon"
+      href="https://res.cloudinary.com/dx97khgxd/image/upload/v1730437919/Screenshot_2024_1026_100527-removebg-preview_h9ami8.png"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="https://res.cloudinary.com/dx97khgxd/image/upload/v1730437919/Screenshot_2024_1026_100527-removebg-preview_h9ami8.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="https://res.cloudinary.com/dx97khgxd/image/upload/v1730437919/Screenshot_2024_1026_100527-removebg-preview_h9ami8.png" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <link
+      rel="apple-touch-icon"
+      href="https://res.cloudinary.com/dx97khgxd/image/upload/v1730437919/Screenshot_2024_1026_100527-removebg-preview_h9ami8.png"
+    />
+    <link
+      rel="manifest"
+      href="https://res.cloudinary.com/dx97khgxd/image/upload/v1730437919/Screenshot_2024_1026_100527-removebg-preview_h9ami8.png"
+    />
     <title>Quotidian</title>
+    <style>
+      /* Styles for the download banner */
+      #downloadBanner {
+        display: none;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        background-color: #2196f3;
+        color: white;
+        text-align: center;
+        padding: 15px;
+        z-index: 1000;
+      }
+      #downloadBanner button {
+        margin-left: 10px;
+        background-color: #ff4081;
+        color: white;
+        border: none;
+        padding: 8px 12px;
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <!-- Download Banner -->
+    <div id="downloadBanner">
+      Download our mobile app for the best experience!
+      <button onclick="downloadApp()">Download</button>
+      <button onclick="dismissBanner()">Dismiss</button>
+    </div>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script>
+      // Detect if the user is on a mobile device
+      function isMobileDevice() {
+        return /Mobi|Android/i.test(navigator.userAgent);
+      }
+
+      // Show download banner if on mobile
+      if (isMobileDevice()) {
+        document.getElementById('downloadBanner').style.display = 'block';
+      }
+
+      // Download button functionality
+      function downloadApp() {
+        // Replace with your app's download link
+        window.location.href = 'https://progress-fe.onrender.com/';
+      }
+
+      // Dismiss button functionality
+      function dismissBanner() {
+        document.getElementById('downloadBanner').style.display = 'none';
+      }
+    </script>
   </body>
 </html>
